# searchable_pdf

./: .gitignore  LICENSE  MANIFEST.in  README.md  __init__.py  cli.py  install.py  main.py  quickstart.py  rebuild_metadata.py  requirements.txt  run.py  run_quickstart.sh  run_tests.py  setup.cfg  setup.py  test_api_key_validation.py  test_translation.py  test_upload.py
core/: __init__.py
core/analytics/: __init__.py  analyzer.py
core/document/: __init__.py  processor.py
core/extraction/: __init__.py  extractor.py
core/search/: __init__.py  engine.py
core/translation/: __init__.py  translator.py
examples/: __init__.py  basic_usage.py  generate_sample_pdf.py  multilingual_search_example.py  translation_api_key_example.py  translation_example.py
models/: __init__.py  document.py
static/: index.html
tests/: __init__.py  test_basic.py
tests/test_data/: README.md
utils/: __init__.py  imports.py
