[metadata]
name = searchable-pdf-library
version = 1.0.0
description = A library for processing, searching, and extracting data from PDF documents
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name
author_email = your.email@example.com
url = https://github.com/yourusername/searchable-pdf-library
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
python_requires = >=3.8
include_package_data = True
install_requires =
    pdfplumber==0.10.2
    PyPDF2==3.0.1
    fastapi==0.104.1
    uvicorn==0.24.0
    python-multipart==0.0.6
    aiofiles==23.2.1
    sqlalchemy==2.0.23
    whoosh==2.7.4

[options.entry_points]
console_scripts =
    searchable-pdf=run:main

[options.extras_require]
nlp =
    spacy>=3.7.2
    nltk>=3.8.1
data =
    pandas>=2.1.3
    numpy>=1.26.0
all =
    spacy>=3.7.2
    nltk>=3.8.1
    pandas>=2.1.3
    numpy>=1.26.0
